# SDLtest

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  build.bat  hints.txt  linux_CMakeLists.txt  linux_CMakeLists.txt~  linuxenv.sh  winenv.bat
extra/Uncompiled assets/tps/: player_blue.tps
extra/linuxenv/: b.sh  copybin.sh  r.sh
extra/winenv/: bd.bat  copybin.bat  hints.bat  r.bat  rg.bat  vs.bat
lib/linux/Box2d/lib/: Box2D.lib
lib/win32/SDL2-2.0.3/lib/x86/: SDL2.lib  SDL2main.lib
src/: game.cpp  game.h  main.cpp  main.cpp.orig
src/game/: game.cpp  game.h  player.cpp  player.h
src/mintSDL/: display.cpp  display.h  input.cpp  input.h  maths.cpp  maths.h  system.cpp  system.h  timer.cpp  timer.h
src/mintSDL/display/: anim.cpp  anim.h  animation.cpp  animation.h  display.cpp  display.h  draw.cpp  draw.h  geom.cpp  geom.h  rend.cpp  rend.h  texture.cpp  texture.h  tilemap.cpp  tilemap.h  trans.cpp  trans.h
src/mintSDL/gui/: textbox.h
src/mintSDL/input/: input.cpp  input.h
src/mintSDL/maths/: geom.cpp  geom.h  maths.cpp  maths.h  phys.cpp  phys.h
src/mintSDL/util/: array.cpp  array.h  input.cpp  input.h  io.cpp  io.h  system.cpp  system.h  timer.cpp  timer.h
